[gd_scene load_steps=13 format=3 uid="uid://by5kd51cixxgu"]

[ext_resource type="Script" uid="uid://bo2vw5tl14uk4" path="res://player/player.gd" id="1_yf0e5"]
[ext_resource type="Shader" uid="uid://bx8fp0q38t35n" path="res://player/capsule_player.gdshader" id="2_g1dw6"]
[ext_resource type="Texture2D" uid="uid://dlweeb20tvspc" path="res://icon.svg" id="2_rkbax"]
[ext_resource type="PackedScene" uid="uid://nlnarpn8nmxn" path="res://input_manager/input_manager.tscn" id="4_yw30f"]
[ext_resource type="PackedScene" uid="uid://ckljhiydi3u8p" path="res://items/item_manager.tscn" id="5_qjkh3"]
[ext_resource type="PackedScene" uid="uid://dgtxfvo2esvyd" path="res://player/aiming_visual/aiming_visual.tscn" id="6_g6k8r"]
[ext_resource type="Script" uid="uid://c0bg2g4soysfi" path="res://player/grab_manager.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://by03gqnwcld5s" path="res://player/climb_interface.gd" id="8_rgyib"]

[sub_resource type="Curve" id="Curve_rgyib"]
_data = [Vector2(0.2511628, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.6966293), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yw30f"]
shader = ExtResource("2_g1dw6")
shader_parameter/dummy_burn_timer = 5.0
shader_parameter/radius = 0.0
shader_parameter/height = 0.355

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ugqs2"]
radius = 20.0
height = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(50, 20)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_yf0e5")
jump_distance_to_peak = 125.0
fall_distance_from_peak = 80.0
hang_time_curve = SubResource("Curve_rgyib")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yw30f")
texture = ExtResource("2_rkbax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_ugqs2")

[node name="FloorCheckContainer" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorCheckContainer"]
position = Vector2(0, 8)
collision_mask = 5

[node name="RHS" type="RayCast2D" parent="FloorCheckContainer"]
position = Vector2(19, 8)
collision_mask = 5

[node name="LHS" type="RayCast2D" parent="FloorCheckContainer"]
position = Vector2(-20, 8)
collision_mask = 5

[node name="CeilingCheckContainer" type="Node2D" parent="."]

[node name="LHS" type="RayCast2D" parent="CeilingCheckContainer"]
position = Vector2(-19, -8)
target_position = Vector2(0, -45)

[node name="RHS" type="RayCast2D" parent="CeilingCheckContainer"]
position = Vector2(19, -8)
target_position = Vector2(0, -45)

[node name="Label" type="Label" parent="."]
offset_left = -25.0
offset_top = -70.0
offset_right = 26.0
offset_bottom = -47.0
text = "HELLO"

[node name="SideSomersaultTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="WallCheckContainer" type="Node2D" parent="."]

[node name="RHS1" type="RayCast2D" parent="WallCheckContainer"]
position = Vector2(0, -33)
target_position = Vector2(25, 0)

[node name="RHS2" type="RayCast2D" parent="WallCheckContainer"]
target_position = Vector2(25, 0)

[node name="RHS3" type="RayCast2D" parent="WallCheckContainer"]
position = Vector2(0, 36)
target_position = Vector2(25, 0)

[node name="LHS1" type="RayCast2D" parent="WallCheckContainer"]
position = Vector2(0, -33)
target_position = Vector2(-25, 0)

[node name="LHS2" type="RayCast2D" parent="WallCheckContainer"]
target_position = Vector2(-25, 0)

[node name="LHS3" type="RayCast2D" parent="WallCheckContainer"]
position = Vector2(0, 36)
target_position = Vector2(-25, 0)

[node name="LedgeRayContainer" type="Node2D" parent="."]

[node name="LHS" type="RayCast2D" parent="LedgeRayContainer"]
position = Vector2(0, -49)
target_position = Vector2(-50, 0)
collision_mask = 5

[node name="RHS" type="RayCast2D" parent="LedgeRayContainer"]
position = Vector2(0, -49)
target_position = Vector2(50, 0)
collision_mask = 5

[node name="InputManager" parent="." instance=ExtResource("4_yw30f")]
metadata/_edit_group_ = true

[node name="ItemManager" parent="." node_paths=PackedStringArray("input_manager", "player_ref") instance=ExtResource("5_qjkh3")]
input_manager = NodePath("../InputManager")
player_ref = NodePath("..")

[node name="AimingVisual" parent="." instance=ExtResource("6_g6k8r")]

[node name="GrabManager" type="Area2D" parent="." node_paths=PackedStringArray("player_ref")]
visible = false
collision_layer = 2
collision_mask = 16
script = ExtResource("7_boad6")
player_ref = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabManager"]
scale = Vector2(3.790234, -5.1270866)
shape = SubResource("RectangleShape2D_boad6")

[node name="ClimbingInterface" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource("8_rgyib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClimbingInterface"]
visible = false
shape = SubResource("CapsuleShape2D_ugqs2")

[node name="BufferTimersContainer" type="Node2D" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="BufferTimersContainer"]
wait_time = 0.15
one_shot = true

[node name="CoyoteTimeTimer" type="Timer" parent="BufferTimersContainer"]
wait_time = 0.15
one_shot = true

[node name="WallJumpCoyoteTimeTimer" type="Timer" parent="BufferTimersContainer"]
wait_time = 0.25
one_shot = true

[node name="LedgeGrabBufferTimer" type="Timer" parent="BufferTimersContainer"]
wait_time = 0.3
one_shot = true

[node name="DisableHorizontalMovementTimer" type="Timer" parent="BufferTimersContainer"]
wait_time = 0.05
one_shot = true
